--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,15 @@ serde = { version = "1.0.149", features = ["derive"] }
 once_cell = "1.16.0"
 reqwest = { version = "0.11.13", features = ["json"] }
 tempdir = "0.3.7"
+copy_dir = "0.1.2"
+tinytemplate = "1.2.1"
+version = "3.0.0"
+serde_json = "1.0.89"
+derive_more = "0.99.17"
+cached-path = "0.5.3"
+futures = "0.3.25"
 
 [dependencies.neon]
 version = "0.10"
 default-features = false
-features = ["napi-6"]
+features = ["channel-api", "napi-6", "promise-api"]
