--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "bin": {
     "nirb": "./bin"
   },
+  "files": [
+    "bin",
+    "index.node"
+  ],
   "scripts": {
     "build": "cargo-cp-artifact -nc index.node -- cargo build --message-format=json-render-diagnostics",
     "build-debug": "npm run build --",
