--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ serde_json = "1.0.89"
 derive_more = "0.99.17"
 cached-path = "0.5.3"
 futures = "0.3.25"
+log = "0.4.17"
+simple_logger = "4.0.0"
+console_log = "0.2.0"
 
 [dependencies.neon]
 version = "0.10"
