tests(pair): add coverage

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ exclude = ["index.node"]
 [lib]
 crate-type = ["cdylib"]
 
+[profile.coverage]
+inherits = "dev"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
